--- a/naon-theme.css
+++ b/naon-theme.css
@@ -3871,12 +3871,13 @@ section {
       padding-bottom: 7px;
       vertical-align: baseline; }
       .filter-container.tabfilter-container .tabfilter-item-label.selected.expanded .tabfilter-item-link {
-        color: #1e1f29; background-color: #a97be0;}
+        color: #a97be0; background-color: #282A36;}
       .filter-container.tabfilter-container .tabfilter-item-label.selected.expanded:hover {
-        background: #e6a15d; }
+        background: #282A36; }
     .filter-container.tabfilter-container .tabfilter-item-label.selected {
-      background-color: #e6a15d;
-      border-color: #1e1f29; }
+      color: #a97be0;
+      background-color: #282A36;
+      border-color: #a97be0; }
       .filter-container.tabfilter-container .tabfilter-item-label.selected .tabfilter-item-link[data-counter]::after {
         display: none; }
     .filter-container.tabfilter-container .tabfilter-item-label.focused {
@@ -3898,7 +3899,7 @@ section {
     padding: 0 8px 7px 8px;
     margin-bottom: -7px;
     line-height: 22px;
-    color: #1e1f29;
+    color: #6bcce0;
     border: 1px transparent; }
   .filter-container.tabfilter-container .tabfilter-edit {
     margin: -1px 2px -1px -6px; }
@@ -6187,7 +6188,7 @@ z-select[disabled] .focusable, input[disabled], textarea[disabled], select optio
       line-height: auto;
       padding: 0;
       margin: 0;
-      border-left-color: #aaaaaa; }
+      border-left-color: #3ddf6c; }
     .menu-popup .menu-popup-item.disabled {
       background-color: transparent;
       color: #aaaaaa;
